--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,9 @@
 
     <android.support.v7.widget.SearchView
         android:id="@+id/search"
+        style="@style/SearchViewTheme"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-
-    <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+        />
+
 </RelativeLayout>
